--- a/Mod Support/USI-Kontainers.cfg
+++ b/Mod Support/USI-Kontainers.cfg
@@ -2,16 +2,20 @@
 //
 //
 // storageTech
-@PART[C3_Kontainer_INV_M|C3_FlatRnd_01|C3_RTank_00]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/Kontainers]:BEFORE[zzzCSITechTree]
-{
+@PART[C3_Kontainer_INV_M|C3_FlatRnd_01|C3_RTank_00|RadialLqdTank|MountableLqdTank]:NEEDS[UmbraSpaceIndustries/Kontainers]:BEFORE[zzzCSITechTree]
+	{
 		@TechRequired = storageTech
-}
+	}
 // basicLogistics
-@PART[C3_Tank_01|C3_RTank_01]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/Kontainers]:BEFORE[zzzCSITechTree]
-{
+@PART[C3_Tank_01|C3_RTank_01]:NEEDS[UmbraSpaceIndustries/Kontainers]:BEFORE[zzzCSITechTree]
+	{
 		@TechRequired = basicLogistics
-}
+	}
 // logistics
+@PART[C3_FlatRnd_03]:NEEDS[UmbraSpaceIndustries/Kontainers]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = basicLogistics
+	}
 // advLogistics
 // scientificOutposts
 // advOffworldMining
