--- a/Mod Support/USI-MKS.cfg
+++ b/Mod Support/USI-MKS.cfg
@@ -1,30 +1,223 @@
 //UmbraSpaceIndustries/MKS
 //
-@PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-{
+// plasmaPropulsion
+// advEMSystems
+// specializedPlasmaGeneration
+// exoticPlasmaPropulsion
+// ionPropulsion
+// advIonPropulsion
+// advGriddedThrusters
+// expGriddedThrusters
+// nuclearFuelSystems
+// fusionRockets
+// nuclearPropulsion
+// improvedNuclearPropulsion
+// advNuclearPropulsion
+// expNuclearPropulsion
+// exoticNuclearPropulsion
+// propulsionSystems
+// precisionPropulsion
+// efficientPropulsion
+// highEfficiencyPropulsion
+// higherEfficiencyPropulsion
+// veryHighEfficiencyPropulsion
+// tremendousEfficiencyPropulsion
+// basicRocketry
+// generalRocketry
+// advRocketry
+// heavyRocketry
+// heavierRocketry
+@PART[MKS_SkyCrane]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = heavierRocketry
+	}
+// rocketry7
+// veryHeavyRocketry
+// experimentalRocketry
+// giganticRocketry
+// colossalRocketry
+// basicFuelSystems
+// fuelSystems
+// advFuelSystems
+// largeVolumeContainment
+// highPerformanceFuelSystems
+// specializedFuelStorage
+// exoticFuelStorage
+// extremeFuelStorage
+// structures1
+// structures2
+// structures3
+// composites
+// metaMaterials
+// orbitalAssembly
+// orbitalMegastructures
+// fabrication
+// basicConstruction
+// generalConstruction
+// advConstruction
+// specializedConstruction
+// advMetalworks
+// nanolathing
+// exoticAlloys
+// actuators
+// advActuators
+// experimentalActuators
+// offworldManufacturing
+// mechatronics
+// aerodynamicSystems
+// advAerodynamics
+// heavyAerodynamics
+// experimentalAerodynamics
+// aerospaceComposites
+// advAerospaceEngineering
+// earlyAviation
+// aviation
+// subsonicFlight
+// supersonicFlight
+// highAltitudeFlight
+// hypersonicFlight
+// aerospaceTech
+// expAircraftEngines
+// start
+// aeronautics
+// stability
+// flightControl
+// advFlightControl
+// specializedControl
+// unmannedTech
+// advUnmanned
+// largeUnmanned
+// artificialIntelligence
+// landing
+// advLanding
+@PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
 		@TechRequired = advLanding
-}
-@PART[SalamanderPod]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = commandModules
-}
-@PART[Ranger_HeatPump]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = heatManagementSystems
-}
+	}
+// heavyLanding
 @PART[PAL_MiniWheel]:BEFORE[zzzCSITechTree]
-{
+	{
 		@TechRequired = heavyLanding
-}
-@PART[Akita_Bed|Akita_Cab|Akita_Seat|Akita_Wheel|PAL_Ladder]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = logistics
-}
-@PART[Ranger_CommPak]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = comms3
-}
-@PART[MKS_Drill_01*|Ranger_Crusher|Ranger_Sifter|Ranger_Smelter]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-{
+	}
+// advancedMotors
+// specializedLanders
+// heavyLanders
+// simpleCommandModules
+// commandModules
+@PART[SalamanderPod]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = commandModules
+	}
+// heavyCommandModules
+// specializedCommandModules
+// specializedCommandCenters
+// heavyCommandCenters
+// survivability
+// enhancedSurvivability
+// recycling
+// hydroponics
+// stations
+@PART[Tundra_ISM]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = stations
+	}
+// shortTermHabitation
+@PART[MKS_Drill_01*|Ranger_Crusher|Ranger_Sifter|Ranger_Smelter|MKS_Processor125]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
 		@TechRequired = shortTermHabitation
-}
+	}
+// longTermHabitation
+@PART[MKS_Processor250]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = longTermHabitation
+	}
+// advancedStations
+// colonization
+@PART[MKS_Processor375]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = colonization
+	}
+// advColonization
+// storageTech
+// basicLogistics
+// logistics
+@PART[Akita_Bed|Akita_Cab|Akita_Seat|Akita_Wheel|PAL_Ladder]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = logistics
+	}
+// advLogistics
+// scientificOutposts
+// advOffworldMining
+@PART[ATLAS_Harvester_Sm]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advOffworldMining
+	}
+// resourceExploitation
+@PART[ATLAS_Harvester_Sm.a]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advOffworldMining
+	}
+// engineering101
+// basicScience
+// groundScience
+// spaceExploration
+// advExploration
+// scienceTech
+// advScienceTech
+// experimentalScience
+// longTermScienceTech
+// highEnergyScience
+// appliedHighEnergyPhysics
+// ultraHighEnergyPhysics
+// comms1
+// comms2
+// comms3
+@PART[Ranger_CommPak]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = comms3
+	}
+// comms4
+// comms5
+// fusionPower
+// advFusionReactions
+// exoticReactions
+// quantumReactions
+// gadgets
+// nuclearPower
+// largeNuclearPower
+// advNuclearPower
+// expNuclearPower
+// exoticNuclearPower
+// antimatterPower
+// unifiedFieldTheory
+// electrics
+// advElectrics
+// largeElectrics
+// specializedElectrics
+// experimentalElectrics
+// highTechElectricalSystems
+// highPowerElectricalSystems
+// experimentalElectricalSystems
+// exoticElectricalSystems
+// batteryTech
+// solarTech
+// advSolarTech
+// advPVMaterials
+// cuttingEdgeSolarTech
+// exoticSolarTech
+// microwavePowerTransmission
+// earlyHeatManagement
+// heatManagementSystems
+@PART[Ranger_HeatPump]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = heatManagementSystems
+	}
+// advHeatManagement
+// specializedRadiators
+// exoticRadiators
+//
+//
+// ****************************************************************************************** 
+// ****************************************************************************************** 
+// ****************************************************************************************** 
+// ************************************* END OF FILE ****************************************
