--- a/Mod Support/SimpleAdjustableFairings.cfg
+++ b/Mod Support/SimpleAdjustableFairings.cfg
@@ -1,20 +1,35 @@
-@PART[SimpleAdjustableFairing_KWRocketry_Size0,SimpleAdjustableFairing_KWRocketry_Size0Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry,CommunityTechTree]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = earlyAviation
-}
-@PART[SimpleAdjustableFairing_KWRocketry_Size1,SimpleAdjustableFairing_KWRocketry_Size1Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry,CommunityTechTree]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = aviation
-}
-@PART[SimpleAdjustableFairing_KWRocketry_Size1_5,SimpleAdjustableFairing_KWRocketry_Size1_5Expanded,SimpleAdjustableFairing_KWRocketry_Size2,SimpleAdjustableFairing_KWRocketry_Size2Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry,CommunityTechTree]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = aerodynamicSystems
-}
-@PART[SimpleAdjustableFairing_KWRocketry_Size3,SimpleAdjustableFairing_KWRocketry_Size3Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry,CommunityTechTree]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = advAerodynamics
-}
-@PART[SimpleAdjustableFairing_KWRocketry_Size4,SimpleAdjustableFairing_KWRocketry_Size4Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry,CommunityTechTree]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = heavyAerodynamics
-}
+//SimpleAdjustableFairing
+//
+//
+// earlyAviation
+@PART[SimpleAdjustableFairing_KWRocketry_Size0|SimpleAdjustableFairing_KWRocketry_Size0Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = earlyAviation
+	}
+// aviation
+@PART[SimpleAdjustableFairing_KWRocketry_Size1|SimpleAdjustableFairing_KWRocketry_Size1Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = aviation
+	}
+// aerodynamicSystems
+@PART[SimpleAdjustableFairing_KWRocketry_Size1_5|SimpleAdjustableFairing_KWRocketry_Size1_5Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = aerodynamicSystems
+	}
+// advAerodynamics
+@PART[SimpleAdjustableFairing_KWRocketry_Size2|SimpleAdjustableFairing_KWRocketry_Size2Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advAerodynamics
+	}
+// heavyAerodynamics
+@PART[SimpleAdjustableFairing_KWRocketry_Size3|SimpleAdjustableFairing_KWRocketry_Size3Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = heavyAerodynamics
+	}
+// experimentalAerodynamics
+@PART[SimpleAdjustableFairing_KWRocketry_Size4|SimpleAdjustableFairing_KWRocketry_Size4Expanded]:NEEDS[SimpleAdjustableFairings-KWRocketry]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = experimentalAerodynamics
+	}
+// aerospaceComposites
+// advAerospaceEngineering
