--- a/GameData/CSITechTree/Mod Support/MechJeb.cfg
+++ b/GameData/CSITechTree/Mod Support/MechJeb.cfg
@@ -1,5 +1,5 @@
   
-@PART[*]:HAS[@MODULE[MechJebCore],!MODULE[KerbalEVA]]:AFTER[zzzCSITechTree]
+@PART[*]:HAS[@MODULE[MechJebCore],!MODULE[KerbalEVA]]:NEEDS[!MechJebUnlocked]:AFTER[zzzCSITechTree]
 {
   %MODULE[MechJebCore]
   {
