--- a/GameData/CSITechTree/CSI-Stock.cfg
+++ b/GameData/CSITechTree/CSI-Stock.cfg
@@ -2,10 +2,6 @@
 //
 // Stock (Squad) Part Patch
 //
-// 0.1 - Initial Patch
-// 0.2 - Balance Update
-//
-//
 // Stock Parts
 //
 // ************************************* Start *************************************
@@ -336,44 +332,51 @@
 		@TechRequired = hydroponics
 	}
 // stations
-@PART[stationHub]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+@PART[crewCabin]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
 	{
 		@TechRequired = stations
 	}
 // shortTermHabitation
-@PART[RadialDrill|ISRU]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = shortTermHabitation
-	}
 // longTermHabitation
-@PART[LargeTank]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = longTermHabitation
-	}
 // advancedStations
+@PART[stationHub]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advancedStations
+	}
 // colonization
 // advColonization
 // storageTech
 // basicLogistics
-@PART[ServiceBay_250_v2]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+@PART[cargoContainer]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
 	{
 		@TechRequired = basicLogistics
 	}
 // logistics
-@PART[SmallTank|RadialOreTank|MiniDrill|MiniISRU|CargoStorageUnit|Large_Crewed_Lab]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+@PART[SmallTank|CargoStorageUnit|ServiceBay_250_v2]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
 	{
 		@TechRequired = logistics
 	}
 // advLogistics
-
+@PART[RadialOreTank|MiniDrill|MiniISRU]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advLogistics
+	}
 // scientificOutposts
+@PART[LargeTank]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = scientificOutposts
+	}
 // advOffworldMining
+@PART[RadialDrill|ISRU]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advOffworldMining
+	}
 // resourceExploitation
 // engineering101
 @PART[sensorBarometer|ladder1|solarPanels5]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
-{
+	{
 		@TechRequired = engineering101
-}
+	}
 // ************************************* Science *************************************
 // basicScience
 @PART[GooExperiment]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
@@ -383,25 +386,29 @@
 // groundScience
 @PART[roverWheel2|roverBody_v2|science_module|HighGainAntenna5_v2]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
 	{
-	@TechRequired = groundScience
+		@TechRequired = groundScience
 	}
 // spaceExploration
 @PART[evajetpack|sensorAccelerometer]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = spaceExploration
-}
+	{
+		@TechRequired = spaceExploration
+	}
 // advExploration
-@PART[crewCabin||sensorAtmosphere]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = advExploration
-}
+@PART[sensorAtmosphere]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advExploration
+	}
 // scienceTech
 // advScienceTech
+@PART[Large_Crewed_Lab]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advScienceTech
+	}
 // experimentalScience
 @PART[OrbitalScanner]:NEEDS[Squad]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = experimentalScience
-}
+	{
+		@TechRequired = experimentalScience
+	}
 // longTermScienceTech
 // highEnergyScience
 // appliedHighEnergyPhysics
