--- a/GameData/CSITechTree/Mod Support/Kerbalism.cfg
+++ b/GameData/CSITechTree/Mod Support/Kerbalism.cfg
@@ -1,14 +1,191 @@
 //Kerbalism
 //
-@PART[kerbalism-container-radial-small|kerbalism-container-inline-0625]:NEEDS[CommunityTechTree,Kerbalism]:BEFORE[zzzCSITechTree]
+// plasmaPropulsion
+// advEMSystems
+// specializedPlasmaGeneration
+// exoticPlasmaPropulsion
+// ionPropulsion
+// advIonPropulsion
+// advGriddedThrusters
+// expGriddedThrusters
+// nuclearFuelSystems
+// fusionRockets
+// nuclearPropulsion
+// improvedNuclearPropulsion
+// advNuclearPropulsion
+// expNuclearPropulsion
+// exoticNuclearPropulsion
+// propulsionSystems
+// precisionPropulsion
+// efficientPropulsion
+// highEfficiencyPropulsion
+// higherEfficiencyPropulsion
+// veryHighEfficiencyPropulsion
+// tremendousEfficiencyPropulsion
+// basicRocketry
+// generalRocketry
+// advRocketry
+// heavyRocketry
+// heavierRocketry
+// rocketry7
+// veryHeavyRocketry
+// experimentalRocketry
+// giganticRocketry
+// colossalRocketry
+// basicFuelSystems
+// fuelSystems
+// advFuelSystems
+// largeVolumeContainment
+// highPerformanceFuelSystems
+// specializedFuelStorage
+// exoticFuelStorage
+// extremeFuelStorage
+// structures1
+// structures2
+// structures3
+// composites
+// metaMaterials
+// orbitalAssembly
+// orbitalMegastructures
+// fabrication
+// basicConstruction
+// generalConstruction
+// advConstruction
+// specializedConstruction
+// advMetalworks
+// nanolathing
+// exoticAlloys
+// actuators
+// advActuators
+// experimentalActuators
+// offworldManufacturing
+// mechatronics
+// aerodynamicSystems
+// advAerodynamics
+// heavyAerodynamics
+// experimentalAerodynamics
+// aerospaceComposites
+// advAerospaceEngineering
+// earlyAviation
+// aviation
+// subsonicFlight
+// supersonicFlight
+// highAltitudeFlight
+// hypersonicFlight
+// aerospaceTech
+// expAircraftEngines
+// start
+// aeronautics
+// stability
+// flightControl
+// advFlightControl
+// specializedControl
+// unmannedTech
+// advUnmanned
+// largeUnmanned
+// artificialIntelligence
+// landing
+// advLanding
+// heavyLanding
+// advancedMotors
+// specializedLanders
+// heavyLanders
+// simpleCommandModules
+// commandModules
+// heavyCommandModules
+// specializedCommandModules
+// specializedCommandCenters
+// heavyCommandCenters
+// survivability
+// enhancedSurvivability
+@PART[kerbalism-container-radial-small|kerbalism-container-inline-0625]:NEEDS[Kerbalism]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = enhancedSurvivability
 }
-@PART[kerbalism-container-radial-medium|kerbalism-container-inline-125]:NEEDS[CommunityTechTree,Kerbalism]:BEFORE[zzzCSITechTree]
+// recycling
+@PART[kerbalism-container-radial-medium|kerbalism-container-inline-125]:NEEDS[Kerbalism]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = recycling
 }
-@PART[kerbalism-container-radial-big|kerbalism-container-inline-250]:NEEDS[CommunityTechTree,Kerbalism]:BEFORE[zzzCSITechTree]
+// hydroponics
+@PART[kerbalism-container-radial-big|kerbalism-container-inline-250]:NEEDS[Kerbalism]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = hydroponics
 }
+// stations
+// shortTermHabitation
+// longTermHabitation
+// advancedStations
+// colonization
+// advColonization
+// storageTech
+// basicLogistics
+// logistics
+// advLogistics
+// scientificOutposts
+// advOffworldMining
+// resourceExploitation
+// engineering101
+// basicScience
+// groundScience
+// spaceExploration
+// advExploration
+// scienceTech
+// advScienceTech
+// experimentalScience
+// longTermScienceTech
+// highEnergyScience
+// appliedHighEnergyPhysics
+// ultraHighEnergyPhysics
+// comms1
+// comms2
+// comms3
+// comms4
+// comms5
+// fusionPower
+// advFusionReactions
+// exoticReactions
+// quantumReactions
+// gadgets
+// nuclearPower
+// largeNuclearPower
+// advNuclearPower
+// expNuclearPower
+// exoticNuclearPower
+// antimatterPower
+// unifiedFieldTheory
+// electrics
+// advElectrics
+// largeElectrics
+// specializedElectrics
+// experimentalElectrics
+// highTechElectricalSystems
+// highPowerElectricalSystems
+// experimentalElectricalSystems
+// exoticElectricalSystems
+// batteryTech
+// solarTech
+// advSolarTech
+// advPVMaterials
+// cuttingEdgeSolarTech
+// exoticSolarTech
+// microwavePowerTransmission
+// earlyHeatManagement
+// heatManagementSystems
+// advHeatManagement
+// specializedRadiators
+// exoticRadiators
+//
+//
+// ****************************************************************************************** 
+// ****************************************************************************************** 
+// ****************************************************************************************** 
+// ************************************* END OF FILE ****************************************
+
+
+
+
+
+
+
+
