--- a/GameData/CSITechTree/Mod Support/USI-MKS.cfg
+++ b/GameData/CSITechTree/Mod Support/USI-MKS.cfg
@@ -27,11 +27,11 @@
 // advRocketry
 // heavyRocketry
 // heavierRocketry
+// rocketry7
 @PART[MKS_SkyCrane]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 	{
-		@TechRequired = heavierRocketry
+		@TechRequired = rocketry7
 	}
-// rocketry7
 // veryHeavyRocketry
 // experimentalRocketry
 // giganticRocketry
@@ -104,12 +104,12 @@
 // heavyLanders
 // simpleCommandModules
 // commandModules
-@PART[SalamanderPod]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = commandModules
-	}
 // heavyCommandModules
 // specializedCommandModules
+@PART[SalamanderPod]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = specializedCommandModules
+	}
 // specializedCommandCenters
 // heavyCommandCenters
 // survivability
