--- a/GameData/CSITechTree/Mod Support/ReStockPlus.cfg
+++ b/GameData/CSITechTree/Mod Support/ReStockPlus.cfg
@@ -1,122 +1,289 @@
 // ReStockPlus
 //
-@PART[liquidEngine303|liquidEngineT15]:NEEDS[CommunityTechTree,MissingHistory&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = unresearchable
-	@category = none
-	@TechHidden = true
-}
-@PART[pointyNoseConeB_1p5|pointyNoseConeA_1p5]:NEEDS[CommunityTechTree,MissingHistory&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = unresearchable
-	@category = none
-	@TechHidden = true
-}
-@PART[restock-engine-torch|restock-fuel-tank-0625-3]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = basicRocketry
-}
-@PART[restock-decoupler-radial-tiny-1|restock-nosecone-0625-1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = fabrication
-}
-@PART[restock-fueltank-sphere-0625-1|restock-fuel-tank-0625-1|restock-fuel-tank-0625-2|restock-fuel-tank-0625-5]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = generalRocketry
-}
-@PART[restock-fairing-base-0625-1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = earlyAviation
-}
-@PART[restock-goocanister-625-1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = basicScience
-}
-@PART[restock-engine-125-valiant|restock-engine-125-pug]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = advRocketry
-}
-@PART[restock-fueltank-sphere-125-1]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = basicFuelSystems
-}
-@PART[fairingSize1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = aviation
-}
-@PART[restock-rcs-block-multi-mini-2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = flightControl
-}
-@PART[restock-materialbay-radial-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = groundScience
-}
-@PART[restock-fueltank-sphere-1875-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = fuelSystems
-}
-@PART[restock-fairing-base-1875-1|restock-nosecone-1875-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = aerodynamicSystems
-}
-@PART[restock-leg-1-rigid]:NEEDS[CommunityTechTree,RestockRigidLegs]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = landing
-}
-@PART[restock-pod-sphere-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = simpleCommandModules
-}
-@PART[restock-relay-radial-2_v2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = comms1
-}
-@PART[restock-adapter-hollow-25-375-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = specializedConstruction
-}
-@PART[restock-pod-sphere-2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = commandModules
-}
-@PART[restock-antenna-stack-2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = comms2
-}
-@PART[restock-engine-boar|restock-srb-anvil-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = rocketry7
-}
-@PART[restock-fuel-tank-375-4|restock-nosecone-375-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = largeVolumeContainment
-}
-@PART[restock-engineplate-375-1|restock-adapter-hollow-25-375-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = composites
-}
-@PART[restock-structural-tube-5-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = advMetalworks
-}
-@PART[restock-pod-sphere-3]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = heavyCommandModules
-}
-@PART[restock-antenna-stack-3]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = comms3
-}
-@PART[restock-docking-375-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
-{
-		@TechRequired = nanolathing
-}
-@PART[restock-engine-375-corgi]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
+//Mod Name
+//
+// plasmaPropulsion
+// advEMSystems
+// specializedPlasmaGeneration
+// exoticPlasmaPropulsion
+// ionPropulsion
+// advIonPropulsion
+// advGriddedThrusters
+// expGriddedThrusters
+// nuclearFuelSystems
+// fusionRockets
+// nuclearPropulsion
+// improvedNuclearPropulsion
+// advNuclearPropulsion
+// expNuclearPropulsion
+// exoticNuclearPropulsion
+// propulsionSystems
+// precisionPropulsion
+// efficientPropulsion
+// highEfficiencyPropulsion
+@PART[restock-engine-375-corgi]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = higherEfficiencyPropulsion
 }
-@PART[restock-battery-375-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
+// higherEfficiencyPropulsion
+// veryHighEfficiencyPropulsion
+// tremendousEfficiencyPropulsion
+// basicRocketry
+@PART[restock-engine-torch|restock-fuel-tank-0625-3]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{	
+		@TechRequired = basicRocketry
+	}
+// generalRocketry
+@PART[restock-fueltank-sphere-0625-1|restock-fuel-tank-0625-1|restock-fuel-tank-0625-2|restock-fuel-tank-0625-5]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = generalRocketry
+	}
+// advRocketry
+@PART[restock-engine-125-valiant|restock-engine-125-pug]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advRocketry
+	}
+// heavyRocketry
+// heavierRocketry
+// rocketry7
+@PART[restock-engine-boar|restock-srb-anvil-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = rocketry7
+	}
+// veryHeavyRocketry
+// experimentalRocketry
+// giganticRocketry
+// colossalRocketry
+// basicFuelSystems
+@PART[restock-fueltank-sphere-125-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = basicFuelSystems
+}
+// fuelSystems
+@PART[restock-fueltank-sphere-1875-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = fuelSystems
+}
+// advFuelSystems
+// largeVolumeContainment
+@PART[restock-fuel-tank-375-4|restock-nosecone-375-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = largeVolumeContainment
+}
+// highPerformanceFuelSystems
+// specializedFuelStorage
+// exoticFuelStorage
+// extremeFuelStorage
+// structures1
+// structures2
+// structures3
+// composites
+@PART[restock-engineplate-375-1|restock-adapter-hollow-25-375-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = composites
+}
+// metaMaterials
+// orbitalAssembly
+// orbitalMegastructures
+// fabrication
+@PART[restock-decoupler-radial-tiny-1|restock-nosecone-0625-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = fabrication
+	}
+// basicConstruction
+// generalConstruction
+// advConstruction
+// specializedConstruction
+@PART[restock-adapter-hollow-25-375-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = specializedConstruction
+	}
+// advMetalworks
+@PART[restock-structural-tube-5-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advMetalworks
+	}
+// nanolathing
+@PART[restock-docking-375-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = nanolathing
+	}
+// exoticAlloys
+// actuators
+// advActuators
+// experimentalActuators
+// offworldManufacturing
+// mechatronics
+// aerodynamicSystems
+@PART[restock-fairing-base-1875-1|restock-nosecone-1875-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = aerodynamicSystems
+	}
+// advAerodynamics
+// heavyAerodynamics
+// experimentalAerodynamics
+// aerospaceComposites
+// advAerospaceEngineering
+// earlyAviation
+@PART[restock-fairing-base-0625-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = earlyAviation
+	}
+// aviation
+@PART[fairingSize1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = aviation
+	}
+// subsonicFlight
+// supersonicFlight
+// highAltitudeFlight
+// hypersonicFlight
+// aerospaceTech
+// expAircraftEngines
+// start
+// aeronautics
+// stability
+// flightControl
+@PART[restock-rcs-block-multi-mini-2]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = flightControl
+	}
+// advFlightControl
+// specializedControl
+// unmannedTech
+// advUnmanned
+// largeUnmanned
+// artificialIntelligence
+// landing
+@PART[restock-leg-1-rigid]:NEEDS[CommunityTechTree,RestockRigidLegs]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = landing
+	}
+// advLanding
+// heavyLanding
+// advancedMotors
+// specializedLanders
+// heavyLanders
+// simpleCommandModules
+@PART[restock-pod-sphere-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = simpleCommandModules
+	}
+// commandModules
+@PART[restock-pod-sphere-2]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = commandModules
+	}
+// heavyCommandModules
+@PART[restock-pod-sphere-3]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = heavyCommandModules
+	}
+// specializedCommandModules
+// specializedCommandCenters
+// heavyCommandCenters
+// survivability
+// enhancedSurvivability
+// recycling
+// hydroponics
+// stations
+// shortTermHabitation
+// longTermHabitation
+// advancedStations
+// colonization
+// advColonization
+// storageTech
+// basicLogistics
+// logistics
+// advLogistics
+@PART[restock-oretank-1875-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advLogistics
+	}
+// scientificOutposts
+@PART[restock-oretank-375-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = scientificOutposts
+	}
+// advOffworldMining
+// resourceExploitation
+// engineering101
+// basicScience
+@PART[restock-goocanister-625-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{		
+		@TechRequired = basicScience
+	}
+// groundScience
+@PART[restock-materialbay-radial-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = groundScience
+}
+// spaceExploration
+// advExploration
+// scienceTech
+// advScienceTech
+// experimentalScience
+// longTermScienceTech
+// highEnergyScience
+// appliedHighEnergyPhysics
+// ultraHighEnergyPhysics
+// comms1
+@PART[restock-relay-radial-2_v2]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = comms1
+	}
+// comms2
+@PART[restock-antenna-stack-2]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = comms2
+	}
+// comms3
+@PART[restock-antenna-stack-3]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = comms3
+}
+// comms4
+// comms5
+// fusionPower
+// advFusionReactions
+// exoticReactions
+// quantumReactions
+// gadgets
+// nuclearPower
+// largeNuclearPower
+// advNuclearPower
+// expNuclearPower
+// exoticNuclearPower
+// antimatterPower
+// unifiedFieldTheory
+// electrics
+// advElectrics
+// largeElectrics
+// specializedElectrics
+// experimentalElectrics
+@PART[restock-battery-375-1]:NEEDS[ReStockPlus]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = experimentalElectrics
 }
+// highTechElectricalSystems
+// highPowerElectricalSystems
+// experimentalElectricalSystems
+// exoticElectricalSystems
+// batteryTech
+// solarTech
+// advSolarTech
+// advPVMaterials
+// cuttingEdgeSolarTech
+// exoticSolarTech
+// microwavePowerTransmission
+// earlyHeatManagement
+// heatManagementSystems
+// advHeatManagement
+// specializedRadiators
+// exoticRadiators
+//
+//
+// ****************************************************************************************** 
+// ****************************************************************************************** 
+// ****************************************************************************************** 
+// ************************************* END OF FILE ****************************************
