--- a/GameData/CSITechTree/CSI-TechTree.cfg
+++ b/GameData/CSITechTree/CSI-TechTree.cfg
@@ -261,6 +261,25 @@
 @lineTo = LEFT
 }
 	}
+	RDNode
+	{
+		id = basicFusionRockets
+		title = #LOC_CSI_basicFusionRockets_title
+		description = #LOC_CSI_basicFusionRockets_description
+		cost = 1000
+		hideEmpty = False
+		nodeName = node9_basicFusionRockets
+		anyToUnlock = False
+		icon = CommunityTechTree/UI/ctt_icon_fusionRockets
+		pos = -3000,2160,0
+		scale = 0.5
+		Parent
+		{
+			parentID = improvedNuclearPropulsion
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
 	@RDNode:HAS[#id[fusionRockets]]
 	{
 		@cost = 1500
@@ -268,6 +287,31 @@
 		@anyToUnlock = False
 		@pos = -2900,2160,0
 		@scale = 0.5
+		Parent
+		{
+			parentID = basicFusionRockets
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
+		id = advFusionRockets
+		title = #LOC_CSI_advFusionRockets_title
+		description = #LOC_CSI_advFusionRockets_description
+		cost = 2250
+		hideEmpty = False
+		nodeName = node11_advFusionRockets
+		anyToUnlock = False
+		icon = CommunityTechTree/UI/ctt_icon_fusionRockets
+		pos = -2800,2160,0
+		scale = 0.5
+		Parent
+		{
+			parentID = fusionRockets
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
 	}
 	@RDNode:HAS[#id[nuclearPropulsion]]
 	{
