--- a/GameData/CSITechTree/Localization/en-us.cfg
+++ b/GameData/CSITechTree/Localization/en-us.cfg
@@ -1,7 +1,39 @@
 Localization
 {
   en-us
-  {	
+  {
+//tiers
+		#LOC_CSI_tier1_title = Tier 1
+		#LOC_CSI_tier2_title = Tier 2
+		#LOC_CSI_tier3_title = Tier 3
+		#LOC_CSI_tier4_title = Tier 4 - 1.25
+		#LOC_CSI_tier5_title = Tier 5
+		#LOC_CSI_tier6_title = Tier 6 - 1.875
+		#LOC_CSI_tier7_title = Tier 7 - 2.5
+		#LOC_CSI_tier8_title = Tier 8 - 3.75
+		#LOC_CSI_tier9_title = Tier 9 - 5
+		#LOC_CSI_tier10_title = Tier 10
+		#LOC_CSI_tier11_title = Tier 11
+		#LOC_CSI_tier12_title = Tier 12 - 10
+		#LOC_CSI_tier13_title = Tier 13 - 20
+		#LOC_CSI_tier1_description = Tier 1
+		#LOC_CSI_tier2_description = Tier 2
+		#LOC_CSI_tier3_description = Tier 3
+		#LOC_CSI_tier4_description = Tier 4 - 1.25
+		#LOC_CSI_tier5_description = Tier 5
+		#LOC_CSI_tier6_description = Tier 6 - 1.875
+		#LOC_CSI_tier7_description = Tier 7 - 2.5
+		#LOC_CSI_tier8_description = Tier 8 - 3.75
+		#LOC_CSI_tier9_description = Tier 9 - 5
+		#LOC_CSI_tier10_description = Tier 10
+		#LOC_CSI_tier11_description = Tier 11
+		#LOC_CSI_tier12_description = Tier 12 - 10
+		#LOC_CSI_tier13_description = Tier 13 - 20
+//fusion Rockets
+		#LOC_CSI_basicFusionRockets_title = Basic Fusion Rockets
+		#LOC_CSI_basicFusionRockets_description = Basic Fusion Rockets
+		#LOC_CSI_advFusionRockets_title = Advanced Fusion Rockets
+		#LOC_CSI_advFusionRockets_description = Advanced Fusion Rockets
 //structures1
 		#LOC_CSI_structures1_title = Structures - small
 		#LOC_CSI_structures1_description = Small structural parts.
