--- a/GameData/CSITechTree/Mod Support/IDFlags.cfg
+++ b/GameData/CSITechTree/Mod Support/IDFlags.cfg
@@ -1,5 +1,3 @@
-//UmbraSpaceIndustries/MKS
-//
 // plasmaPropulsion
 // advEMSystems
 // specializedPlasmaGeneration
@@ -28,10 +26,6 @@
 // heavyRocketry
 // heavierRocketry
 // rocketry7
-@PART[MKS_SkyCrane]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = rocketry7
-	}
 // veryHeavyRocketry
 // experimentalRocketry
 // giganticRocketry
@@ -79,6 +73,10 @@
 // aerospaceTech
 // expAircraftEngines
 // start
+@PART[ID*]:NEEDS[IDFlags]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = start
+	}
 // aeronautics
 // stability
 // flightControl
@@ -90,15 +88,7 @@
 // artificialIntelligence
 // landing
 // advLanding
-@PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = advLanding
-	}
 // heavyLanding
-@PART[PAL_MiniWheel]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = heavyLanding
-	}
 // advancedMotors
 // specializedLanders
 // heavyLanders
@@ -106,10 +96,6 @@
 // commandModules
 // heavyCommandModules
 // specializedCommandModules
-@PART[SalamanderPod]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = specializedCommandModules
-	}
 // specializedCommandCenters
 // heavyCommandCenters
 // survivability
@@ -117,46 +103,18 @@
 // recycling
 // hydroponics
 // stations
-@PART[Tundra_ISM]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = stations
-	}
 // shortTermHabitation
-@PART[MKS_Drill_01*|Ranger_Crusher|Ranger_Sifter|Ranger_Smelter|MKS_Processor125]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = shortTermHabitation
-	}
 // longTermHabitation
-@PART[MKS_Processor250]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = longTermHabitation
-	}
 // advancedStations
 // colonization
-@PART[MKS_Processor375]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = colonization
-	}
 // advColonization
 // storageTech
 // basicLogistics
 // logistics
-@PART[Akita_Bed|Akita_Cab|Akita_Seat|Akita_Wheel|PAL_Ladder]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = logistics
-	}
 // advLogistics
 // scientificOutposts
 // advOffworldMining
-@PART[ATLAS_Harvester_Sm]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = advOffworldMining
-	}
 // resourceExploitation
-@PART[ATLAS_Harvester_Sm_a]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = advOffworldMining
-	}
 // engineering101
 // basicScience
 // groundScience
@@ -172,10 +130,6 @@
 // comms1
 // comms2
 // comms3
-@PART[Ranger_CommPak]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = comms3
-	}
 // comms4
 // comms5
 // fusionPower
@@ -208,10 +162,6 @@
 // microwavePowerTransmission
 // earlyHeatManagement
 // heatManagementSystems
-@PART[Ranger_HeatPump]:NEEDS[UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
-	{
-		@TechRequired = heatManagementSystems
-	}
 // advHeatManagement
 // specializedRadiators
 // exoticRadiators
