--- a/GameData/CSITechTree/Localization/zh-cn.cfg
+++ b/GameData/CSITechTree/Localization/zh-cn.cfg
@@ -119,11 +119,11 @@ Localization
 		#LOC_CSI_comms2_title = C3 通信
 		#LOC_CSI_comms2_description = 高级通信技术
 		#LOC_CSI_comms3_title = C4 通信
-		#LOC_CSI_comms3_description = 专业级通信技术
+		#LOC_CSI_comms3_description = 专业通信技术
 		#LOC_CSI_comms4_title = C5 通信
-		#LOC_CSI_comms4_description = 深空通信技术
+		#LOC_CSI_comms4_description = 深空通信
 		#LOC_CSI_comms5_title = C6 通信
-		#LOC_CSI_comms5_description = 量子通信
+		#LOC_CSI_comms5_description = 极限电信工业
 		//scientificOutposts
 		#LOC_CSI_scientificOutposts_title = 种植物流
 
